fix: overflow

--- a/src/components/Modal/ModalActivity.module.css
+++ b/src/components/Modal/ModalActivity.module.css
@@ -51,6 +51,8 @@
 .table .table-body {
   display: flex;
   height: 48px;
+  width: 280px;
+  max-width: 280px;
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid #ccc;
@@ -121,4 +123,9 @@ input[type="number"] {
 
 .wrap {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.table-body-wrap {
+  width: auto !important;
+  overflow-y: hidden;
 }
